--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="next.app.logomakr.com/8RRi9vl" href="https://cdn-icons-png.freepik.com/512/421/421648.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Password Generator</title>
   </head>
   <body style=" background-color: #000;">
     <div id="root"></div>
